--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ p {
 }
 
 a:hover, a:focus {
-  color: #0f52ba;
+  color: #0F52BA;
 }
 
 a {
@@ -32,11 +32,11 @@ a {
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
+  color: #FFF;
 }
 
 h1, h2, h3, h4, h5 {
   font-family: 'Poppins', sans-serif;
-  font-size: 40px;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -304,6 +304,32 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 /* ==========================================================================
   6. Features Section Style
    ========================================================================== */
+#news {
+  background: url(../img/bg-news.jpg) fixed no-repeat;
+  background-size: cover;
+  color: #fff;
+  overflow: hidden;
+  position: relative;
+}
+
+#news img {
+	max-width: 100%;
+}
+
+#news h4 {
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  text-transform: uppercase;
+  line-height: 22px;
+}
+
+#news .readmore {
+	text-align: right;
+	padding-right: 30px;	
+}
+
+
 #launcher {
   background: url(../img/bg-a.jpg) fixed no-repeat;
   background-size: cover;
