--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 /* ==========================================================================
    3. Hero Area
    ========================================================================== */
-#hero-area {
+#hero-area, #hero-small {
   background: url(../img/hero-area.jpg) fixed no-repeat;
   background-size: cover;
   color: #fff;
@@ -273,7 +273,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   position: relative;
 }
 
-#hero-area .overlay {
+#hero-area .overlay, #hero-small .overlay {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -287,12 +287,12 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   padding: 35% 0 55%;
 }
 
-#hero-area .contents img {
+#hero-area .contents img, #hero-small .contents img {
   width: 70%;
   margin-bottom: 25px;
 }
 
-#hero-area .contents p {
+#hero-area .contents p, #hero-small .contents p {
   font-size: 22px;
   color: #fff;
   font-weight: 400;
@@ -300,6 +300,13 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   letter-spacing: 0.5px;
 }
 
+/* ==========================================================================
+   3. Hero Small
+   ========================================================================== */
+
+#hero-small .contents {
+  padding: 10% 0 10%;
+}
 
 /* ==========================================================================
   6. Features Section Style
