Background Fix + Scrollbar
* Made the scrollbar invisible but still usable.
* Made the page body color match the game section. This gets rid of issues on lower resolutions where the white page background could be seen when scrolling with the parallax.

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,12 @@ body {
   color: #333;
   font-size: 14px;
   font-weight: 400;
-  background: #fff;
+  background: #333;
   overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 html {
